tests/ui/tuple/wrong_argument_ice-4.stderr
error[E0057]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/wrong_argument_ice-4.rs:2:5
   |
LL |       (|| {})(|| {
   |  _____^^^^^^^_-
LL | |
LL | |         let b = 1;
LL | |     });
   | |     -
   | |     |
   | |_____unexpected argument of type `[closure@$DIR/wrong_argument_ice-4.rs:2:13: 2:15]`
   |       help: remove the extra argument
   |
note: closure defined here
  --> $DIR/wrong_argument_ice-4.rs:2:6
   |
LL |     (|| {})(|| {
   |      ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0057`.
